// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Player Empty 1`] = `
<section
  class="storybook-snapshot-container"
>
  <audio
    autoplay=""
    class="svelte-5j1b4y"
  />
   
  <div
    class="flex items-center svelte-5j1b4y"
  >
    <span
      class="current svelte-5j1b4y"
    />
     
    <div
      class="player svelte-5j1b4y"
    >
      <span
        class="controls svelte-5j1b4y"
      >
        <button
          class="mx-1 svelte-ztyk6h iconOnly noBorder"
        >
          <i
            class="material-icons svelte-ztyk6h"
          >
            skip_previous
          </i>
           
        </button>
         
        <button
          class="mx-1 svelte-ztyk6h iconOnly large"
        >
          <i
            class="material-icons svelte-ztyk6h"
          >
            play_arrow
          </i>
           
        </button>
         
        <button
          class="mx-1 svelte-ztyk6h iconOnly noBorder"
        >
          <i
            class="material-icons svelte-ztyk6h"
          >
            skip_next
          </i>
           
        </button>
      </span>
       
      <span
        class="controls time svelte-5j1b4y"
      >
        <span
          class="svelte-5j1b4y"
        >
          0:00
        </span>
         
        <div
          class="wrapper w-full svelte-md11fe"
        >
          <input
            class="w-full svelte-md11fe"
            max="0"
            min="0"
            type="range"
          />
           
          <div
            class="sliderTrack svelte-md11fe"
          >
            <span
              class="progress svelte-md11fe"
              style="right:100%"
            />
          </div>
        </div>
         
        <span
          class="svelte-5j1b4y"
        >
          0:00
        </span>
      </span>
    </div>
     
    <span
      class="playlist svelte-5j1b4y"
    >
      <button
        class="mx-1 svelte-ztyk6h iconOnly large"
      >
        <i
          class="material-icons svelte-ztyk6h"
        >
          queue_music
        </i>
         
      </button>
    </span>
  </div>
</section>
`;

exports[`Storyshots Components/Player With Track List 1`] = `
<section
  class="storybook-snapshot-container"
>
  <audio
    autoplay=""
    class="svelte-5j1b4y"
    src="./no-duration.mp3"
  />
   
  <div
    class="flex items-center svelte-5j1b4y"
  >
    <span
      class="current svelte-5j1b4y"
    >
      <div
        class="undefined root svelte-p26357"
      >
        <a
          class="flex-none"
          href="#/album/0"
        >
          <img
            alt="./# Films/cover.jpg"
            class="h-16 w-16 text-xs svelte-hn7eai rounded-sm"
            loading="lazy"
            src="./%23 Films/cover.jpg#nonce=0.1"
          />
           
          
        </a>
         
        <div
          class="track svelte-p26357"
        >
          <span
            class="title svelte-p26357"
          >
            file 1
          </span>
           
          <a
            class="artist underlined svelte-p26357"
            href="#/artist/4090049524"
          >
            Someone
          </a>
        </div>
         
      </div>
    </span>
     
    <div
      class="player svelte-5j1b4y"
    >
      <span
        class="controls svelte-5j1b4y"
      >
        <button
          class="mx-1 svelte-ztyk6h iconOnly noBorder"
        >
          <i
            class="material-icons svelte-ztyk6h"
          >
            skip_previous
          </i>
           
        </button>
         
        <button
          class="mx-1 svelte-ztyk6h iconOnly large"
        >
          <i
            class="material-icons svelte-ztyk6h"
          >
            play_arrow
          </i>
           
        </button>
         
        <button
          class="mx-1 svelte-ztyk6h iconOnly noBorder"
        >
          <i
            class="material-icons svelte-ztyk6h"
          >
            skip_next
          </i>
           
        </button>
      </span>
       
      <span
        class="controls time svelte-5j1b4y"
      >
        <span
          class="svelte-5j1b4y"
        >
          0:00
        </span>
         
        <div
          class="wrapper w-full svelte-md11fe"
        >
          <input
            class="w-full svelte-md11fe"
            max="0"
            min="0"
            type="range"
          />
           
          <div
            class="sliderTrack svelte-md11fe"
          >
            <span
              class="progress svelte-md11fe"
              style="right:100%"
            />
          </div>
        </div>
         
        <span
          class="svelte-5j1b4y"
        >
          0:00
        </span>
      </span>
    </div>
     
    <span
      class="playlist svelte-5j1b4y"
    >
      <button
        class="mx-1 svelte-ztyk6h iconOnly large"
      >
        <i
          class="material-icons svelte-ztyk6h"
        >
          queue_music
        </i>
         
      </button>
    </span>
  </div>
</section>
`;
